--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "fs-extra": "^9.0.0"
   },
   "peerDependencies": {
-    "@wdio/cucumber-framework": "^6.1.1"
+    "@wdio/cucumber-framework": "^7.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
